--- a/public/index.html
+++ b/public/index.html
@@ -265,7 +265,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary" onclick="procesarOCR()" id="btnProcesarOCR" disabled>Procesar OCR</button>
-              <button type="button" class="btn btn-info" id="btnCargarJugadasOCR" disabled>Cargar Jugadas al Form</button>
+              <button type="button" class="btn btn-info" id="btnCargarJugadas" onclick="handleCargarTodasLasJugadasClick()" disabled>Cargar Jugadas al Form</button>
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             </div>
           </div>
