--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,11 @@
   </div>
 
   <div class="container my-5">
-    <h2 class="text-center mb-4">Beast Reader (Cricket) East New York</h2>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2 class="text-center flex-grow-1 me-3">Beast Reader (Cricket) East New York</h2>
+      <!-- Theme Toggle Button -->
+      <button id="themeToggleBtn" class="btn btn-secondary btn-sm"><i class="bi bi-moon"></i> <i class="bi bi-sun" style="display: none;"></i></button>
+    </div>
 
     <!-- Main Form -->
     <form id="lotteryForm">
@@ -192,14 +196,15 @@
         <table class="table table-dark table-bordered glow-table" id="jugadasTable">
           <thead>
             <tr>
+ <th class="select-col-header"><input type="checkbox" id="selectAllCheckbox"></th>
               <th style="width: 40px;">#</th>
               <th>Bet Number</th>
               <th>Game Mode</th>
               <th>Straight ($)</th>
               <th>Box ($)</th>
               <th>Combo ($)</th>
-              <th>Total ($)</th>
-            </tr>
+              <th>Total</th>
+
           </thead>
           <tbody id="tablaJugadas">
             <!-- Rows added dynamically -->
@@ -209,9 +214,11 @@
 
       <!-- Buttons: Add, Wizard, Remove Last, Reset -->
       <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap"> <!-- Added flex-wrap -->
+ <button type="button" class="btn btn-dark me-2" id="pasteAmountsButton"><i class="bi bi-clipboard-fill"></i> Paste Amounts</button> <!-- Added Paste Button -->
         <div class="button-group mb-2 mb-md-0"> <!-- Margin bottom on small screens -->
           <button type="button" class="btn btn-primary me-1" id="agregarJugada"><i class="bi bi-plus-circle"></i> Add</button>
-          <button type="button" class="btn btn-info me-1" id="wizardButton"><i class="bi bi-magic"></i> Wizard</button>
+ <button type="button" class="btn btn-info me-1" id="wizardButton"><i class="bi bi-magic"></i> Wizard</button>
+ <button type="button" class="btn btn-secondary me-1" id="openDailyReportBtn"><i class="bi bi-file-text"></i> Abrir Reporte Diario</button>
           <button type="button" class="btn btn-danger me-1" id="eliminarJugada"><i class="bi bi-dash-circle"></i> Remove Last</button>
           <button type="button" class="btn btn-warning" id="resetForm"><i class="bi bi-arrow-clockwise"></i> Reset</button>
         </div>
