Add export plays to CSV feature

--- a/public/index.html
+++ b/public/index.html
@@ -290,6 +290,13 @@
                     <span class="action-button-name">Reset</span>
                   </button>
                 </div>
+                <!-- Export Plays -->
+                <div class="action-button-container">
+                  <button type="button" class="btn btn-success action-button" id="exportPlaysButton">
+                    <i class="bi bi-download"></i>
+                    <span class="action-button-name">Export Plays</span>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
