--- a/public/index.html
+++ b/public/index.html
@@ -216,6 +216,13 @@
                     <span class="action-button-name">Generate Ticket</span>
                   </button>
                 </div>
+
+                <div class="action-button-container">
+                  <button type="button" class="btn btn-outline-success action-button" id="previewAndPay" disabled>
+                    <i class="bi bi-currency-bitcoin"></i>
+                    <span class="action-button-name">Preview &amp; Pay (Crypto)</span>
+                  </button>
+                </div>
                 
                 <div class="action-button-container">
                   <button type="button" class="btn btn-primary action-button" id="agregarJugada">
@@ -344,11 +351,17 @@
             <div class="barcode text-center"><div id="qrcode"></div></div>
           </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="editButton">Edit</button>
-          <button type="button" class="btn btn-primary" id="confirmarTicket">Confirm & Print</button>
-          <button type="button" class="btn btn-info d-none" id="shareTicket">Share Ticket</button>
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+        <div class="modal-footer flex-column flex-lg-row align-items-lg-start gap-3">
+          <div class="btcpay-payment-column w-100">
+            <button type="button" class="btn btn-success btn-crypto w-100" id="btcpayPayButton">Pay with Crypto</button>
+            <p id="btcpayStatusMessage" class="payment-status mt-2 mb-0"></p>
+          </div>
+          <div class="ticket-action-buttons d-flex flex-wrap justify-content-end gap-2 w-100">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="editButton">Edit</button>
+            <button type="button" class="btn btn-primary" id="confirmarTicket" disabled>Confirm & Print</button>
+            <button type="button" class="btn btn-info d-none" id="shareTicket">Share Ticket</button>
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+          </div>
         </div>
       </div>
     </div>
